--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Fri Apr 14 13:50:39 SGT 2023
-sdk.dir=C\:\\Users\\TARUMT\\AppData\\Local\\Android\\Sdk
+#Fri Apr 14 23:15:05 SGT 2023
+sdk.dir=C\:\\Users\\shiyi\\AppData\\Local\\Android\\Sdk
